# pinkman

./: .gitignore  LICENSE  Makefile  README.md  example.env  pyproject.toml
pinkman/: definitions.py
pinkman/dbt/: assets.py  definitions.py  resources.py
pinkman/dlt/: assets.py  definitions.py
pinkman/dlt/destinations/: motherduck.py
pinkman/dlt/sources/arxiv/: main.py  settings.py
pinkman/utils/: arxiv_helpers.py  environment_helpers.py
pinkman_dbt/: .gitignore  Makefile  dbt_project.yml  dependencies.yml  package-lock.yml  profiles.yml  selectors.yml
pinkman_dbt/macros/: get_custom_schema.sql  limit_dates_for_dev.sql
pinkman_tests/: conftest.py  test_defs.py
pinkman_tests/dlt/: conftest.py
pinkman_tests/utils/: conftest.py  test_arxiv.py  test_environment.py
